; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/virtio/extr_virtio_crypto_core.c_virtcrypto_clear_request.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/virtio/extr_virtio_crypto_core.c_virtcrypto_clear_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.virtio_crypto_request = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @virtcrypto_clear_request(%struct.virtio_crypto_request* %0) #0 {
  %2 = alloca %struct.virtio_crypto_request*, align 8
  store %struct.virtio_crypto_request* %0, %struct.virtio_crypto_request** %2, align 8
  %3 = load %struct.virtio_crypto_request*, %struct.virtio_crypto_request** %2, align 8
  %4 = icmp ne %struct.virtio_crypto_request* %3, null
  br i1 %4, label %5, label %14

5:                                                ; preds = %1
  %6 = load %struct.virtio_crypto_request*, %struct.virtio_crypto_request** %2, align 8
  %7 = getelementptr inbounds %struct.virtio_crypto_request, %struct.virtio_crypto_request* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @kzfree(i32 %8)
  %10 = load %struct.virtio_crypto_request*, %struct.virtio_crypto_request** %2, align 8
  %11 = getelementptr inbounds %struct.virtio_crypto_request, %struct.virtio_crypto_request* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @kfree(i32 %12)
  br label %14

14:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @kzfree(i32) #1

declare dso_local i32 @kfree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
